[package]
name = "net_fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.15"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
serde_json = "1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
bytes = "1"
libc = "0.2"
hostname = "0.4"

# Phase 2: Networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
mdns-sd = "0.12"

[dev-dependencies]
tempfile = "3"
